<resources>
    <string name="app_name">SEG2105_Project</string>
    <string name="string_title">InstaFix</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="logo_description">Logo</string>
    <string name="title_sign_in">Sign In</string>
    <string name="error_message">Username and/or Password is incorrect</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_up_message">Click here to Sign Up</string>
    <string name="heading_username">Username:</string>
    <string name="heading_password">Password:</string>
    <string name="first_name">Enter First Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="heading_name">Name</string>
    <string name="hint_email">Enter your e-mail</string>
    <string name="hint_password_verify">Verify your password</string>
    <string name="radio_client">Client</string>
    <string name="radio_service_provider">Service Provider</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_firstlast">Enter First and Last Name:</string>
    <string name="enter_user">Username:</string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_pass_verify"><![CDATA[Enter Password & Verify:]]></string>
    <string name="heading_email">Email:</string>
    <string name="SignUPButton">Sign Up</string>
    <string name="radio_admin">Admin</string>
    <string name="title_activity_service_provider">ServiceProviderActivity</string>
    <string name="Service_Provider_Services">Your Services:</string>
    <string name="Service_Provider_Information">Service Provider Information</string>
    <string name="Address">Address</string>
    <string name="Hint_Address">Enter Address</string>
    <string name="Phone">Phone</string>
    <string name="hint_Phone" />
    <string name="hint__Phone">Enter Phone Number</string>
    <string name="Company">Company</string>
    <string name="hint_Company">Enter Company Name</string>
    <string name="Description">Description</string>
    <string name="hint_description">e.g. I have 20 years of experience fixing washer and dryers</string>
    <string name="Licensed">Licensed</string>
    <string name="btn_Next">Next</string>
    <string name="Availability">Availability</string>
    <string name="availaibility">Set Availability</string>
    <string name="availabilities">Availabilities:</string>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_client_home">ClientHome</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="Service_Provider_Home">Home</string>

    <string name="welcome">Welcome</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="Select_Day">Select Day</string>
    <string name="Set_Availability">Set Availability</string>
    <string name="Set_Start_TIme">Set Start TIme</string>
    <string name="Set_End_Time">Set End Time</string>
    <string name="Remove_Availability">Remove Availability</string>
    <string name="Add">Add</string>
    <string name="Set_Availbility2">Set Availability</string>
    <string name="Current_Orders">Your Current Orders:</string>
</resources>
