<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceProviderInfo">

    <TextView
        android:id="@+id/txtSPInfo"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Service_Provider_Information"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtErrorAlert"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSPInfo" />

    <ScrollView
        android:id="@+id/scrollServiceProvider"
        android:layout_width="368dp"
        android:layout_height="375dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtErrorAlert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Hint_Address"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint__Phone"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Company"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_Company"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/hint_description"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/checkLicensed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Licensed"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="350dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addInfo"
        android:text="@string/btn_Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollServiceProvider" />

</android.support.constraint.ConstraintLayout>